# agency

./: .env  .gitignore  Makefile  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  release-notes.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  labeler.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml  generate-client.yml  labeler.yml  latest-changes.yml  playwright.yml  smokeshow.yml  test.yml
backend/: BOT_README.md  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py  utils.py
backend/app/core/: config.py  db.py  nosql_db.py  scheduled_tasks.py  security.py
backend/app/crud/: config.py  core.py  (+1 more)
backend/scripts/: test-dev.sh  test.sh
frontend/: .env  README.md  index.html  package-lock.json  package.json
frontend/landing-page/: index.html
frontend/old/: index.html  items.tsx
frontend/src/: main.tsx  routeTree.gen.ts
frontend/tests/: login.spec.ts
scripts/: generate-client.ps1
worker/: pyproject.toml  worker_apply_example.py
worker/bot_mock/: .env.example  README.md  api_client.py  bot_session.py  config.py  docker-compose.yml  logger.py  main.py  models.py  requirements.txt  worker_apply_example.py
workers/bot_mock/: .dockerignore  .env.example  .gitignore  Dockerfile  bot_session.py  deploy.ps1  docker-compose.yml  logger.py  main.py  requirements.txt
(+217 files in other folders)
