[tool.poetry]
name = "worker"
version = "0.1.0"
description = "worker prestart"
authors = ["Gustavo Carvalho <99373133+gustavosett@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
